[metadata]
name = sopel-spongemock
version = 1.0.0
description = Sopel plugin to generate "Spongemock" text (based on *that* SpongeBob meme)
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-spongemock
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.0,<9

[options.extras_require]
lib = spongemock

[options.entry_points]
sopel.plugins =
    spongemock = sopel_spongemock
